<resources>
    <string name="app_name">InspektAR</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="cannot_connect_camera">Can\'t connect to the camera.</string>
    <!-- message for the dialog showing the camera is disabled because of security policies. Camera cannot be used. -->
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="title_home_screen">Videos</string>
    <string name="search">SEARCH</string>
    <string name="import_video">IMPORT</string>
    <string name="add_new_video">ADD NEW VIDEO</string>
    <string name="export">EXPORT</string>
    <string name="annotations">ANNOTATIONS</string>

    <string name="btnDiscard">Discard</string>
    <string name="lblVideoDescription">Video description:</string>
    <string name="lblVideoName">Video title:</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
</resources>
